--- a/app/src/main/res/layout/fac_portionupdate_layout.xml
+++ b/app/src/main/res/layout/fac_portionupdate_layout.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/Ll_facPortionView"
-    android:padding="10dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -89,7 +86,7 @@
 
             <TextView
                 android:id="@+id/tv_allPortion"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/textView9"
                 android:layout_alignBottom="@+id/textView9"
@@ -110,7 +107,7 @@
 
             <TextView
                 android:id="@+id/tv_remPortion"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/textView12"
                 android:layout_alignBottom="@+id/textView12"
@@ -131,7 +128,7 @@
 
             <TextView
                 android:id="@+id/tv_totalTopicsPortion"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/tv_tot"
                 android:layout_alignBottom="@+id/tv_tot"
@@ -152,20 +149,24 @@
 
             <TextView
                 android:id="@+id/tv_completedPortionView"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/tv_totalTopicsPortion"
                 android:layout_alignStart="@+id/tv_totalTopicsPortion"
                 android:layout_alignTop="@+id/textView11"
                 android:text="TextView" />
+
+            <Button
+                android:id="@+id/btn_updatePortionTab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/tv_completedPortionView"
+                android:layout_alignStart="@+id/tv_completedPortionView"
+                android:layout_below="@+id/tv_completedPortionView"
+                android:layout_marginTop="39dp"
+                android:text="Update" />
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
-    <!--<Button
-        android:id="@+id/btn_updatePortion"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:text="Update" />-->
 </LinearLayout>
