--- a/app/src/main/res/layout/portion_view_d_layout.xml
+++ b/app/src/main/res/layout/portion_view_d_layout.xml
@@ -15,7 +15,7 @@
         android:text="Total Topics :" />
 
     <TextView
-        android:id="@+id/tv_total_portion"
+        android:id="@+id/tv_PortionBatchView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -31,8 +31,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView8"
         android:layout_alignBottom="@+id/textView8"
-        android:layout_alignEnd="@+id/tv_total_portion"
-        android:layout_alignRight="@+id/tv_total_portion"
+        android:layout_alignEnd="@+id/tv_PortionBatchView"
+        android:layout_alignRight="@+id/tv_PortionBatchView"
         android:text="10" />
 
     <TextView
@@ -58,13 +58,13 @@
         android:text="All Topics :" />
 
     <TextView
-        android:id="@+id/tv_all_portion"
+        android:id="@+id/tv_allPortion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView9"
         android:layout_alignBottom="@+id/textView9"
-        android:layout_alignLeft="@+id/tv_total_portion"
-        android:layout_alignStart="@+id/tv_total_portion"
+        android:layout_alignLeft="@+id/tv_PortionBatchView"
+        android:layout_alignStart="@+id/tv_PortionBatchView"
         android:text="TextView" />
 
     <TextView
@@ -83,8 +83,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView12"
         android:layout_alignBottom="@+id/textView12"
-        android:layout_alignLeft="@+id/tv_all_portion"
-        android:layout_alignStart="@+id/tv_all_portion"
+        android:layout_alignLeft="@+id/tv_allPortion"
+        android:layout_alignStart="@+id/tv_allPortion"
         android:text="TextView" />
 
 </RelativeLayout>
