--- a/app/src/main/res/drawable/ic_key.xml
+++ b/app/src/main/res/drawable/ic_key.xml
@@ -1,4 +1,4 @@
-<vector android:height="24dp" android:viewportHeight="56.0"
-    android:viewportWidth="56.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M40,0c-8.82,0 -16,7.18 -16,16c0,3.29 1,6.34 2.7,8.88L0.29,51.29c-0.39,0.39 -0.39,1.02 0,1.41C0.49,52.9 0.74,53 1,53s0.51,-0.1 0.71,-0.29L6,48.41l7.29,7.29C13.49,55.9 13.74,56 14,56s0.51,-0.1 0.71,-0.29c0.39,-0.39 0.39,-1.02 0,-1.41L7.41,47L11,43.41l5.29,5.29C16.49,48.9 16.74,49 17,49s0.51,-0.1 0.71,-0.29c0.39,-0.39 0.39,-1.02 0,-1.41L12.41,42L16,38.41l7.29,7.29C23.49,45.9 23.74,46 24,46s0.51,-0.1 0.71,-0.29c0.39,-0.39 0.39,-1.02 0,-1.41L17.41,37l10.52,-10.52C30.87,29.85 35.19,32 40,32c8.82,0 16,-7.18 16,-16S48.82,0 40,0zM40,30c-7.72,0 -14,-6.28 -14,-14S32.28,2 40,2s14,6.28 14,14S47.72,30 40,30z"/>
+<vector android:height="24dp" android:viewportHeight="516.375"
+    android:viewportWidth="516.375" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FF000000" android:pathData="M353.8,0C263.9,0 191.3,72.7 191.3,162.6c0,19.1 3.8,38.3 9.6,57.4L0,420.8v95.6h95.6V459H153v-57.4h57.4l86.1,-86.1c17.2,5.7 36.3,9.6 57.4,9.6c89.9,0 162.6,-72.7 162.6,-162.6S443.7,0 353.8,0zM401.6,172.1c-32.5,0 -57.4,-24.9 -57.4,-57.4s24.9,-57.4 57.4,-57.4S459,82.2 459,114.8S434.1,172.1 401.6,172.1z"/>
 </vector>
