--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,26 +8,24 @@
     tools:context="in.classguru.classguru.MainActivity">
 
     <EditText
-        android:backgroundTint="#0bb1ba"
-        android:drawablePadding="10dp"
         android:id="@+id/etUsername"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="39dp"
         android:layout_marginBottom="284dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:backgroundTint="#ef87b5"
+        android:drawableLeft="@drawable/ic_user"
+        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="@string/username"
         android:inputType="textPersonName"
-        android:drawableLeft="@drawable/ic_user"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:backgroundTint="#0bb1ba"
-        android:drawablePadding="10dp"
         android:id="@+id/etPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,7 +33,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:backgroundTint="#ffcc4f"
         android:drawableLeft="@drawable/ic_key"
+        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
@@ -79,7 +79,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:backgroundTint="#15858a"
+        android:backgroundTint="#46c7f4"
         android:onClick="OnLogin"
 
         android:text="@string/login"
@@ -100,6 +100,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@+id/etUsername"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/splash" />
