--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -1,26 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/lin_lay"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/splash_img3"
-    android:layout_gravity="center"
-    android:id="@+id/lin_lay"
     android:gravity="center"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <ImageView
-        android:layout_width="300dp"
-        android:layout_height="250dp"
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/splash_img7" />
+
+    <ImageView
         android:id="@+id/splash"
-        android:background="@drawable/splash" />
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:adjustViewBounds="false"
+        android:background="@drawable/splash"
+        android:cropToPadding="false" />
 
     <ProgressBar
-        android:padding="5dp"
         android:id="@+id/splash_screen_progress_bar"
+        style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
-        />
+        android:layout_alignBottom="@+id/imageView2"
+        android:layout_centerHorizontal="true"
+        android:padding="5dp" />
 
-</LinearLayout>
+</RelativeLayout>
 
